--- a/Todo Project/MainWindow.xaml
+++ b/Todo Project/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <StackPanel>
         <ListBox DisplayMemberPath="Name" ItemsSource="{Binding Path=users}" SelectedItem="{Binding Path=SelectedItem}"></ListBox>
-        <Button Content="Add todo" Click="Button_Click_1" Height="51" Margin="228,0"/>
+        <Button Content="Add todo" Command="{Binding AddCommand}" CommandParameter="{Binding textbox}" Height="51" Margin="228,0"/>
         <Button Content="Remove todo" Click="TodoRemove" Height="51"/>
         <TextBox Text="{Binding Path=textbox}" AcceptsReturn="False" Height="125" Background="Azure" FontSize="20"/>
     </StackPanel>
