--- a/Todo Project/MainWindow.xaml
+++ b/Todo Project/MainWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <StackPanel>
-        <ListBox DisplayMemberPath="Name" ItemsSource="{Binding Path=users}" SelectedItem="{Binding Path=SelectedItem}"></ListBox>
-        <Button Content="Add todo" Command="{Binding AddCommand}" CommandParameter="{Binding textbox}" Height="51" Margin="228,0"/>
-        <Button Content="Remove todo" Command="{Binding RemoveCommand}" CommandParameter="{Binding textbox}" Height="51"/>
-        <TextBox Text="{Binding Path=textbox}" AcceptsReturn="False" Height="125" Background="Azure" FontSize="20"/>
+        <ListBox DisplayMemberPath="Name" ItemsSource="{Binding Path=items}" SelectedItem="{Binding Path=SelectedItem}"></ListBox>
+        <Button Content="Add todo" Command="{Binding AddItemCommand}" CommandParameter="{Binding itemtext}" Height="51" Margin="228,0"/>
+        <Button Content="Remove todo" Command="{Binding RemoveItemCommand}" CommandParameter="{Binding itemtext}" Height="51"/>
+        <TextBox Text="{Binding Path=itemtext}" AcceptsReturn="False" Height="125" Background="Azure" FontSize="20"/>
     </StackPanel>
 </Window>
