--- a/Todo Project/MainWindow.xaml
+++ b/Todo Project/MainWindow.xaml
@@ -6,10 +6,12 @@
         xmlns:local="clr-namespace:Todo_Project"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <StackPanel>
-        <ListBox DisplayMemberPath="Name" ItemsSource="{Binding Path=items}" SelectedItem="{Binding Path=SelectedItem}"></ListBox>
-        <Button Content="Add todo" Command="{Binding AddItemCommand}" CommandParameter="{Binding itemtext}" Height="51" Margin="228,0"/>
-        <Button Content="Remove todo" Command="{Binding RemoveItemCommand}" CommandParameter="{Binding itemtext}" Height="51"/>
-        <TextBox Text="{Binding Path=itemtext}" AcceptsReturn="False" Height="125" Background="Azure" FontSize="20"/>
+    <StackPanel Background="#FF202225">
+        <ListBox DisplayMemberPath="Name" ItemsSource="{Binding Path=items}" SelectedItem="{Binding Path=SelectedItem}" MinHeight="100" MaxHeight="284" Foreground="White"></ListBox>
+        <StackPanel Orientation="Horizontal">
+            <Button ToolTip="Adds item to the listbox" Content="Add todo" Command="{Binding AddItemCommand}" CommandParameter="{Binding itemtext}" Height="51" Width="396" />
+            <Button ToolTip="Removes item from the listbox" Content="Remove todo" Command="{Binding RemoveItemCommand}" CommandParameter="{Binding itemtext}" Height="51" Width="396"/>
+        </StackPanel>
+        <TextBox Text="{Binding Path=itemtext}" AcceptsReturn="False" Background="#FF76B9ED" Foreground="White" ToolTip="Type in your item here!" FontSize="20"/>
     </StackPanel>
 </Window>
