--- a/Todo Project/MainWindow.xaml
+++ b/Todo Project/MainWindow.xaml
@@ -9,9 +9,9 @@
     <StackPanel Background="#FF202225">
         <ListBox DisplayMemberPath="Name" ItemsSource="{Binding Path=items}" SelectedItem="{Binding Path=SelectedItem}" MinHeight="100" MaxHeight="284" Foreground="White"></ListBox>
         <StackPanel Orientation="Horizontal">
-            <Button ToolTip="Adds item to the listbox" Content="Add todo" Command="{Binding AddItemCommand}" CommandParameter="{Binding itemtext}" Height="51" Width="396" />
-            <Button ToolTip="Removes item from the listbox" Content="Remove todo" Command="{Binding RemoveItemCommand}" CommandParameter="{Binding itemtext}" Height="51" Width="396"/>
+            <Button ToolTip="Adds item to the listbox" Content="Add todo" Command="{Binding AddItemCommand}" Margin="5,5,3,5" Height="51" Width="385"/>
+            <Button ToolTip="Removes item from the listbox" Content="Remove todo" Command="{Binding RemoveItemCommand}" Margin="3,5,5,5" Height="51" Width="385"/>
         </StackPanel>
-        <TextBox Text="{Binding Path=itemtext}" AcceptsReturn="False" Background="#FF76B9ED" Foreground="White" ToolTip="Type in your item here!" FontSize="20"/>
+        <TextBox Text="{Binding itemtext, UpdateSourceTrigger=PropertyChanged}" AcceptsReturn="False" Background="#FF76B9ED" Margin="5,0,5,0" Foreground="White" ToolTip="Type in your item here!" FontSize="20"/>
     </StackPanel>
 </Window>
